# Stefan

./: .gitignore  00_HEAD.md  01_FRAMEWORK.md  02_SIMULATION_CORE.md  03_UI_INTEGRATION.md  04_RESULT_VISUALIZATION.md  05_RESULT_EXPORT_AND_CASES.md  06_REALTIME_DISPLAY_UPDATE.md  07_UI_POLISH.md  08_WINDOWS_RELEASE.md  OPEN_QUESTIONS.md  README.md  environment.yml  pyproject.toml
docs/: framework.md  realtime_display_update.md  result_export_and_cases.md  result_visualization.md  simulation_core.md  ui_integration.md  ui_polish.md  windows_release.md
resources/examples/: default_case.json
resources/styles/: app.qss
scripts/: build_windows.ps1
src/stefan_app/: __init__.py  app.py  main.py
src/stefan_app/export/: __init__.py  csv_exporter.py
src/stefan_app/models/: __init__.py  case_io.py  simulation.py
src/stefan_app/plotting/: __init__.py  series.py
src/stefan_app/solver/: __init__.py  base.py
src/stefan_app/ui/: __init__.py  main_window.py  plot_widgets.py  worker.py
src/stefan_app/utils/: __init__.py  exceptions.py  logging.py  paths.py
tests/: __init__.py  test_export_and_cases.py  test_framework_imports.py  test_simulation_core.py  test_ui_integration.py
