[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stefan-simulator"
version = "0.1.0"
description = "A PyQt6 desktop application for one-dimensional Stefan problem simulation."
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "PyQt6>=6.6,<7.0",
]

[project.scripts]
stefan-app = "stefan_app.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
